# HwpReader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
hwpreader/: __init__.py  cli.py  config.py  excel_writer.py  hwp_extractor.py  models.py  pipeline.py  transform.py
resource/: config.json  excel_example.xlsx
tests/: test_excel_writer.py  test_hwp_extractor.py  test_pipeline.py  test_transform.py
